<resources>
    <string name="app_name">"Asteroides "</string>
    <string name="textoBotonJugar">Jugar</string>
    <string name="textoBotonConfig">Configurar</string>
    <string name="textoBotonAcercaDe">Acerca de</string>
    <string name="textoBotonSalir">Salir</string>
    <string name="tituloAplicacion">"Asteroides "</string>
    <string name="textoAcercaDe">Este programa ha sido desarrollado como ejemplo en el curso de android</string>
    <string name="textoBuscar">Buscar</string>




</resources>